--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
 
         /* Base styles */
         body {
-            font-family: 'Merriweather', serif;
+            font-family: 'Space Grotesk', serif;
             line-height: 1.8;
             background-color: #f8f5f1;
             color: #4a4440;
@@ -41,12 +41,12 @@
             justify-content: center;
             align-items: center;
             padding: 2rem;
-            text-align: center;
+/*             text-align: center; */
             border-bottom: 1px solid #e0d7d0;
         }
 
         header h1 {
-            font-family: 'Space Grotesk', sans-serif;
+            font-family: 'Merriweather', sans-serif;
             font-size: 2.5rem;
             color: #6b5952;
             margin-bottom: 1.5rem;
@@ -65,7 +65,7 @@
 
         .links-section h2 {
             font-family: 'Space Grotesk', sans-serif;
-            font-size: 1.5rem;
+            font-size: 1.4rem;
             color: #6b5952;
             margin-bottom: 1rem;
         }
